src/syntax/parser/snapshots/hebi__syntax__parser__tests__unary_expr-3.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Not,
        right: GetVar(
            GetVar {
                name: Ident(
                    "a",
                ),
            },
        ),
    },
)
