src/syntax/parser/snapshots/hebi__syntax__parser__tests__unary_expr-4.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Opt,
        right: Call(
            Call {
                target: GetField(
                    GetField {
                        target: GetIndex(
                            GetIndex {
                                target: GetField(
                                    GetField {
                                        target: GetVar(
                                            GetVar {
                                                name: "a",
                                            },
                                        ),
                                        name: "b",
                                    },
                                ),
                                key: GetVar(
                                    GetVar {
                                        name: "c",
                                    },
                                ),
                            },
                        ),
                        name: "d",
                    },
                ),
                args: Args {
                    pos: [],
                    kw: [],
                },
            },
        ),
    },
)
