src/syntax/parser/snapshots/hebi__syntax__parser__tests__unary_expr.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Plus,
        right: GetVar(
            GetVar {
                name: Ident(
                    "a",
                ),
            },
        ),
    },
)
